# project-101

./: Dockerfile  app.py  directories.py  main.py  mapping.json  pyproject.toml  utils.py
features/: Copy of 14658_00_5C2E317C6554_AE53B3FCC47B.json  Copy of 14659_00_ABCF7D3F7EDE_49BE84FE362D.json  Copy of 14661_00_0F2612A1F6E1_BBDB2BA77449.json  Copy of 14662_00_0B6BBA4DFD33_A9C034DCE609.json  Copy of 14663_00_92B31EFCF233_B4F9BD42899A.json  Copy of 14664_00_ABEB35240D94_1A6C8AB7400A.json  Copy of 14665_00_BE41D8543480_1D15371E54FD.json  Copy of 14666_00_7C22798A57EE_46F2F8ED3FCD.json  Copy of 14667_00_8FF577F3BE73_FD26D24C44A1.json  Copy of 14668_00_9A1C8D77670D_2B722D431CAC.json  Copy of 14670_00_7AA9D5980F9C_35B933C5C1E2.json  Copy of 14672_00_A416E37C77CE_10B939C4D7C7.json  Copy of 14677_00_D225A792349C_B9FC69CFBE9D.json  Copy of 14678_00_1C0D1706C0BD_7E98F4EA89AE.json  Copy of 14680_00_5F842159B010_9783945D519B.json  Copy of 14681_00_3425F4CB655D_5E6302B684FC.json  Copy of 14682_00_5359C0C106F7_B109327C39C7.json  Copy of 14683_00_067DD0FEAF9C_0C196B3FDB46.json  Copy of 14684_00_B66B51E81290_55A1EFF5A14B.json  Copy_of_14657_00_8385E3989502_80AA6B2DB686.json
static/css/: custom.css
static/js/: script.js
templates/: index.html
