[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
barcode = "^1.0.4"
email-validator = "^2.2.0"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
numpy = "^1.24.0"  # Downgraded to 1.x for stability
opencv-python-headless = "^4.11.0"  # Lighter alternative
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
python-barcode = "^0.15.1"
pyzbar = "^0.1.9"
werkzeug = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
